--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ table {
   outline: none;
 }
 
-.svg-arrow-down, .svg-arrow-left, .insights-wrapper .insights-list .owl-nav .owl-prev, .svg-arrow-left-hover, .insights-wrapper .insights-list .owl-nav .owl-prev:hover, .svg-arrow-right, .footer .footer-links h5:after, .insights-wrapper .insights-list .owl-nav .owl-next, .svg-arrow-right-hover, .mega-nav .menu.has-submenu > a:after, .insights-wrapper .insights-list .owl-nav .owl-next:hover, .svg-arrow-up, .svg-burger, .header .burger, .svg-chevron, form.search .form-content .search-types-toggle:after, .svg-chevron-green, form.search .form-content .search-types-toggle:hover:after, .svg-close, form.search .form-content .close, .svg-close-black, .header .burger.opened, .svg-close-blue, form.search .form-content .close:hover, .svg-ellipse, .hero-slides.owl-carousel .owl-dot, .svg-ellipse-empty, .hero-slides.owl-carousel .owl-dot:hover, .svg-ellipse-selected, .hero-slides.owl-carousel .owl-dot.active, .svg-facebook, .footer .social-links .facebook, .hero-slides-wrapper .social-links .facebook, .svg-facebook-green-fill, .svg-facebook-green-outline, .svg-facebook-white, .footer .social-links .facebook:hover, .hero-slides-wrapper .social-links .facebook:hover, .svg-insights-article, .insights-wrapper .article, .svg-insights-article-hover, .insights-wrapper .img-wrapper:hover .article, .svg-insights-audio, .insights-wrapper .audio, .svg-insights-audio-hover, .insights-wrapper .img-wrapper:hover .audio, .svg-insights-video, .insights-wrapper .video, .svg-insights-video-hover, .insights-wrapper .img-wrapper:hover .video, .svg-linkedin, .footer .social-links .linkedin, .hero-slides-wrapper .social-links .linkedin, .svg-linkedin-green-fill, .svg-linkedin-green-outline, .svg-linkedin-white, .footer .social-links .linkedin:hover, .hero-slides-wrapper .social-links .linkedin:hover, .svg-links, .svg-retweet, .svg-search, form.search .form-content .do-search, .svg-search-blue, form.search .form-content .do-search:hover, .svg-search-icon, .actions-nav .action-search, .svg-search-icon-hover, .actions-nav .action-search:hover, .actions-nav .action-search.active, .svg-search-type-all, form.search .form-content .search-types .all label:before, form.search .form-content .search-types-toggle.all, .svg-search-type-insights, form.search .form-content .search-types .insights label:before, form.search .form-content .search-types-toggle.insights, .svg-search-type-people, form.search .form-content .search-types .people label:before, form.search .form-content .search-types-toggle.people, .svg-search-type-strategies, form.search .form-content .search-types .strategies label:before, form.search .form-content .search-types-toggle.strategies, .svg-twitter, .footer .social-links .twitter, .hero-slides-wrapper .social-links .twitter, .svg-twitter-green-fill, .svg-twitter-green-outline, .svg-twitter-white, .footer .social-links .twitter:hover, .hero-slides-wrapper .social-links .twitter:hover, .svg-user, .actions-nav .action-login, .svg-user-hover, .actions-nav .action-login:hover, .actions-nav .action-login.active, .svg-view-all-blue, .press-wrapper .content .view-all:hover:before, .svg-view-all-green, .press-wrapper .content .view-all:before, .svg-youtube, .footer .social-links .youtube, .hero-slides-wrapper .social-links .youtube, .svg-youtube-green-fill, .svg-youtube-green-outline, .svg-youtube-white, .footer .social-links .youtube:hover, .hero-slides-wrapper .social-links .youtube:hover {
+.svg-arrow-down, .svg-arrow-left, .insights-wrapper .insights-list .owl-nav .owl-prev, .svg-arrow-left-hover, .insights-wrapper .insights-list .owl-nav .owl-prev:hover, .svg-arrow-right, .footer .footer-links h5:after, .insights-wrapper .insights-list .owl-nav .owl-next, .svg-arrow-right-hover, .mega-nav .menu.has-submenu > a:after, .insights-wrapper .insights-list .owl-nav .owl-next:hover, .svg-arrow-up, .svg-burger, .header .burger:before, .svg-chevron, form.search .form-content .search-types-toggle:after, .svg-chevron-green, form.search .form-content .search-types-toggle:hover:after, .svg-close, form.search .form-content .close, .svg-close-black, .header .burger.opened:before, .svg-close-blue, form.search .form-content .close:hover, .svg-ellipse, .hero-slides.owl-carousel .owl-dot, .svg-ellipse-empty, .hero-slides.owl-carousel .owl-dot:hover, .svg-ellipse-selected, .hero-slides.owl-carousel .owl-dot.active, .svg-facebook, .footer .social-links .facebook, .hero-slides-wrapper .social-links .facebook, .svg-facebook-green-fill, .svg-facebook-green-outline, .svg-facebook-white, .footer .social-links .facebook:hover, .hero-slides-wrapper .social-links .facebook:hover, .svg-insights-article, .insights-wrapper .article, .svg-insights-article-hover, .insights-wrapper .img-wrapper:hover .article, .svg-insights-audio, .insights-wrapper .audio, .svg-insights-audio-hover, .insights-wrapper .img-wrapper:hover .audio, .svg-insights-video, .insights-wrapper .video, .svg-insights-video-hover, .insights-wrapper .img-wrapper:hover .video, .svg-linkedin, .footer .social-links .linkedin, .hero-slides-wrapper .social-links .linkedin, .svg-linkedin-green-fill, .svg-linkedin-green-outline, .svg-linkedin-white, .footer .social-links .linkedin:hover, .hero-slides-wrapper .social-links .linkedin:hover, .svg-links, .svg-retweet, .svg-search, form.search .form-content .do-search, .svg-search-blue, form.search .form-content .do-search:hover, .svg-search-icon, .actions-nav .action-search, .svg-search-icon-hover, .actions-nav .action-search:hover, .actions-nav .action-search.active, .svg-search-type-all, form.search .form-content .search-types .all label:before, form.search .form-content .search-types-toggle.all, .svg-search-type-insights, form.search .form-content .search-types .insights label:before, form.search .form-content .search-types-toggle.insights, .svg-search-type-people, form.search .form-content .search-types .people label:before, form.search .form-content .search-types-toggle.people, .svg-search-type-strategies, form.search .form-content .search-types .strategies label:before, form.search .form-content .search-types-toggle.strategies, .svg-twitter, .footer .social-links .twitter, .hero-slides-wrapper .social-links .twitter, .svg-twitter-green-fill, .svg-twitter-green-outline, .svg-twitter-white, .footer .social-links .twitter:hover, .hero-slides-wrapper .social-links .twitter:hover, .svg-user, .actions-nav .action-login, .svg-user-hover, .actions-nav .action-login:hover, .actions-nav .action-login.active, .svg-view-all-blue, .press-wrapper .content .view-all:hover:before, .svg-view-all-green, .press-wrapper .content .view-all:before, .svg-youtube, .footer .social-links .youtube, .hero-slides-wrapper .social-links .youtube, .svg-youtube-green-fill, .svg-youtube-green-outline, .svg-youtube-white, .footer .social-links .youtube:hover, .hero-slides-wrapper .social-links .youtube:hover {
   background: url("svg/sprite.css-be7989a7.svg") no-repeat;
 }
 
@@ -115,7 +115,7 @@ table {
   height: 16px;
 }
 
-.svg-burger, .header .burger {
+.svg-burger, .header .burger:before {
   background-position: 29.927007299270073% 94.28571428571429%;
 }
 
@@ -151,7 +151,7 @@ table {
   height: 30px;
 }
 
-.svg-close-black, .header .burger.opened {
+.svg-close-black, .header .burger.opened:before {
   background-position: 75.09293680297398% 82.25108225108225%;
 }
 
@@ -1440,6 +1440,16 @@ table {
 .header .burger {
   display: none;
 }
+.header .burger:before {
+  content: '';
+  display: block;
+  width: 25px;
+  height: 16px;
+}
+.header .burger.opened:before {
+  width: 30px;
+  height: 30px;
+}
 
 .navigations {
   display: flex;
@@ -1783,10 +1793,14 @@ form.search .form-content .close {
     display: inline-block;
     width: 32px;
     height: 32px;
-    margin: 15px 67px 15px 0;
+    padding: 8px 3.5px;
+    margin: 19px 67px 19px 0;
+  }
+  .header .burger.opened {
+    padding: 1px;
   }
   .header .logo {
-    margin: 15px 0;
+    margin: 19px 0;
   }
   .header .logo img {
     max-height: 32px;
@@ -1797,10 +1811,8 @@ form.search .form-content .close {
   }
   .header .action-login,
   .header .action-search {
-    background-size: 32px 32px !important;
-    height: 32px;
-    margin: 15px 5px;
-    width: 32px;
+    margin: 14px 5px;
+    transform: scale(0.7804);
   }
   .header .navigations {
     width: auto;
@@ -1812,7 +1824,7 @@ form.search .form-content .close {
     left: 0;
     max-height: none;
     padding: 5px 16px 10px;
-    top: 62px;
+    top: 70px;
     width: 100%;
     z-index: 999;
   }
@@ -1918,22 +1930,20 @@ form.search .form-content .close {
   }
   .header .mega-nav form.search .form-content {
     width: auto;
+    height: 40px;
   }
   .header .mega-nav form.search .form-content .search-types-toggle {
-    background-size: 20px 20px;
-    left: 15px;
-  }
-  .header .mega-nav form.search .form-content .search-types-toggle:after {
-    background-size: 20px 20px;
-    left: 20px;
+    left: 12.5px;
+    top: 50%;
+    transform: translateY(-12px) scale(0.8333);
   }
   .header .mega-nav form.search .form-content .do-search {
-    background-size: 24px 24px;
+    transform: translateY(-14px) scale(0.923);
   }
   .header .mega-nav form.search .form-content input[type=text] {
     border-width: 1px;
     padding: 5px 15px 5px 65px;
-    font-size: 14px;
+    font-size: 16px;
   }
   .header .mega-nav form.search .form-content input[type=text]::placeholder {
     /* Chrome, Firefox, Opera, Safari 10.1+ */
@@ -1948,11 +1958,16 @@ form.search .form-content .close {
     font-size: 14px;
   }
   .header .mega-nav form.search .form-content .search-types {
+    border-width: 1px;
+    margin-top: -1px;
     z-index: 1;
   }
   .header .mega-nav form.search .form-content .search-types li label {
-    background-size: 20px 20px;
+    padding: 13px 13px 13px 49px;
     font-size: 14px;
+  }
+  .header .mega-nav form.search .form-content .search-types li label:before {
+    transform: scale(0.8333);
   }
   .header .mega-nav form.search .form-content .close {
     display: none;
@@ -2073,6 +2088,8 @@ form.search .form-content .close {
   margin: 0 23.5px;
 }
 .footer .footer-submenu .menu a {
+  display: inline-block;
+  position: relative;
   color: #fff;
   font-style: normal;
   font-weight: 600;
@@ -2081,8 +2098,21 @@ form.search .form-content .close {
   text-decoration: none;
   transition: all 0.2s ease-in-out;
 }
-.footer .footer-submenu .menu a:hover {
-  color: #0C2F4B;
+.footer .footer-submenu .menu a:after {
+  content: '';
+  display: block;
+  border: 1px solid #fff;
+  border-radius: 2px;
+  width: 100%;
+  position: absolute;
+  bottom: -5px;
+  transform-origin: 100% 50%;
+  transform: scaleX(0);
+  transition: transform .2s ease;
+}
+.footer .footer-submenu .menu a:hover:after {
+  transform: scaleX(1);
+  transform-origin: 0 50%;
 }
 .footer .copyright {
   max-width: 620px;
@@ -2102,6 +2132,8 @@ form.search .form-content .close {
   padding: 0 11px;
 }
 .footer .additional-links li a {
+  display: inline-block;
+  position: relative;
   color: #fff;
   font-style: normal;
   font-weight: 600;
@@ -2111,8 +2143,21 @@ form.search .form-content .close {
   text-decoration: none;
   transition: all 0.2s ease-in-out;
 }
-.footer .additional-links li a:hover {
-  color: #0C2F4B;
+.footer .additional-links li a:after {
+  content: '';
+  display: block;
+  border: 1px solid #fff;
+  border-radius: 2px;
+  width: 100%;
+  position: absolute;
+  bottom: -5px;
+  transform-origin: 100% 50%;
+  transform: scaleX(0);
+  transition: transform .2s ease;
+}
+.footer .additional-links li a:hover:after {
+  transform: scaleX(1);
+  transform-origin: 0 50%;
 }
 
 @media screen and (max-width: 1279px) {
@@ -2140,18 +2185,19 @@ form.search .form-content .close {
     padding-left: 20px;
   }
   .footer .footer-links .footer-menu > li.opened h5:after {
-    transform: rotate(-90deg);
+    transform: rotate(-90deg) scale(0.5);
   }
   .footer .footer-links .footer-menu > li.opened ul {
     display: block;
   }
   .footer .footer-links .footer-menu li {
-    margin-bottom: 25px;
+    margin-bottom: 20px;
   }
   .footer .footer-links .footer-menu li > a {
     font-size: 14.5px;
     line-height: 17px;
     letter-spacing: 0.2em;
+    opacity: 1;
   }
   .footer .footer-links .footer-menu h5 {
     position: relative;
@@ -2159,19 +2205,32 @@ form.search .form-content .close {
   .footer .footer-links .footer-menu h5:after {
     content: '';
     display: block;
-    height: 20px;
+    height: 48px;
     position: absolute;
     right: 0;
-    top: 0;
-    width: 20px;
-    transform: rotate(90deg);
+    top: -50%;
+    width: 48px;
+    margin-right: -12px;
+    margin-top: 6px;
+    z-index: 0;
+    transform: rotate(90deg) scale(0.5);
   }
   .footer .footer-links .footer-menu h5 a,
   .footer .footer-links .footer-menu h5 a:hover,
   .footer .footer-links .footer-menu h5 a:focus,
   .footer .footer-links .footer-menu h5 a:active {
-    margin-bottom: 20px;
+    padding-bottom: 20px;
+    margin: 0;
+    display: block;
+    position: relative;
+    z-index: 1;
     color: #fff;
+  }
+  .footer .footer-links .footer-menu h5 a:after,
+  .footer .footer-links .footer-menu h5 a:hover:after,
+  .footer .footer-links .footer-menu h5 a:focus:after,
+  .footer .footer-links .footer-menu h5 a:active:after {
+    display: none;
   }
   .footer .links {
     flex-direction: column;
@@ -2391,9 +2450,18 @@ body {
   margin: 0 32.5px;
   position: relative;
   width: 300px;
+  visibility: hidden;
+  opacity: 0;
+  transform: matrix(1, 0, 0, 1, 0, 450);
+  transition: opacity 2s ease-in-out, transform 2s ease-in-out;
 }
 .home-info .tiles li:nth-child(2n) {
   margin-top: 75px;
+}
+.home-info .tiles li.show {
+  visibility: visible;
+  transform: matrix(1, 0, 0, 1, 0, 0);
+  opacity: 1;
 }
 .home-info .tiles img {
   border-radius: 3px;
@@ -2422,14 +2490,15 @@ body {
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
-  transition: bottom 1s;
+  justify-content: flex-start;
+  top: 247px;
+  transition: top 1s;
 }
 .home-info .tiles .tile-content a {
   text-decoration: none;
 }
 .home-info .tiles .tile-content p {
-  max-width: 260px;
+  width: 260px;
   margin: 0 auto 10px;
   color: #fff;
   font-style: normal;
@@ -2565,6 +2634,7 @@ body {
   transition: background-image 0.2s ease-in-out;
 }
 .insights-wrapper .button-wrapper {
+  margin-top: 95px;
   text-align: center;
 }
 .insights-wrapper .insights-type {
