--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -235,8 +235,19 @@ body {
 			position: relative;
 			width: 300px;
 
+			visibility: hidden;
+			opacity: 0;
+			transform: matrix(1, 0, 0, 1, 0, 450);
+			transition: opacity 2s ease-in-out, transform 2s ease-in-out;
+
 			&:nth-child(2n) {
 				margin-top: 75px;
+			}
+
+			&.show {
+				visibility: visible;
+				transform: matrix(1, 0, 0, 1, 0, 0);
+				opacity: 1;
 			}
 		}
 
@@ -272,16 +283,17 @@ body {
 			height: 100%;
 			display: flex;
 			flex-direction: column;
-			justify-content: flex-end;
+			justify-content: flex-start;
+			top: 247px;
 
-			transition: bottom 1s;
+			transition: top 1s;
 
 			a {
 				text-decoration: none;
 			}
 
 			p {
-				max-width: 260px;
+				width: 260px;
 				margin: 0 auto 10px;
 
 				color: #fff;
@@ -517,7 +529,7 @@ body {
 	}
 
 	.button-wrapper {
-		// margin-top: 95px;
+		margin-top: 95px;
 
 		text-align: center;
 	}
