--- a/css/style.css
+++ b/css/style.css
@@ -2547,6 +2547,7 @@ body {
   max-width: 260px;
   margin: 0 auto 25px;
   position: relative;
+  z-index: 2;
   color: #fff;
   font-style: normal;
   font-weight: bold;
@@ -2562,26 +2563,28 @@ body {
   flex-direction: column;
   justify-content: flex-start;
   top: 247px;
-  z-index: 2;
   transition: top 1s;
 }
-.home-info .tiles .tile-content:before {
+.home-info .tiles .tile-content a {
+  position: relative;
+  text-decoration: none;
+}
+.home-info .tiles .tile-content a:before {
   background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, #000000 87.5%);
   content: '';
   display: block;
   position: absolute;
-  height: 100%;
+  padding-top: 100%;
   left: 0;
   right: 0;
   bottom: 0;
   z-index: 1;
 }
-.home-info .tiles .tile-content a {
-  text-decoration: none;
-}
 .home-info .tiles .tile-content p {
   width: 260px;
   margin: 0 auto 10px;
+  position: relative;
+  z-index: 2;
   color: #fff;
   font-style: normal;
   font-weight: 600;
