--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -266,6 +266,7 @@ body {
 			max-width: 260px;
 			margin: 0 auto 25px;
 			position: relative;
+			z-index: 2;
 
 			color: #fff;
 			font-style: normal;
@@ -284,29 +285,32 @@ body {
 			flex-direction: column;
 			justify-content: flex-start;
 			top: 247px;
-			z-index: 2;
 
 			transition: top 1s;
 
-			&:before {
-				background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, #000000 87.5%);
-				content: '';
-				display: block;
-				position: absolute;
-				height: 100%;
-				left: 0;
-				right: 0;
-				bottom: 0;
-				z-index: 1;
-			}
-
 			a {
+				position: relative;
+
 				text-decoration: none;
+
+				&:before {
+					background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, #000000 87.5%);
+					content: '';
+					display: block;
+					position: absolute;
+					padding-top: 100%;
+					left: 0;
+					right: 0;
+					bottom: 0;
+					z-index: 1;
+				}
 			}
 
 			p {
 				width: 260px;
 				margin: 0 auto 10px;
+				position: relative;
+				z-index: 2;
 
 				color: #fff;
 				font-style: normal;
