--- a/css/style.css
+++ b/css/style.css
@@ -61,12 +61,12 @@ a {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
-.svg-arrow-down, .svg-arrow-left, .insights-wrapper .insights-list .owl-nav .owl-prev, .svg-arrow-left-hover, .insights-wrapper .insights-list .owl-nav .owl-prev:hover, .svg-arrow-right, .footer .footer-links h5:after, .insights-wrapper .insights-list .owl-nav .owl-next, .svg-arrow-right-hover, .mega-nav .menu.has-submenu > a:after, .insights-wrapper .insights-list .owl-nav .owl-next:hover, .svg-arrow-up, .svg-burger, .svg-chevron, form.search .form-content .search-types-toggle:after, .svg-chevron-green, form.search .form-content .search-types-toggle:hover:after, .svg-close, form.search .form-content .close, .svg-close-black, .svg-close-blue, form.search .form-content .close:hover, .svg-ellipse, .hero-slides.owl-carousel .owl-dot, .svg-ellipse-empty, .hero-slides.owl-carousel .owl-dot:hover, .svg-ellipse-selected, .hero-slides.owl-carousel .owl-dot.active, .svg-facebook, .footer .social-links .facebook, .hero-slides-wrapper .social-links .facebook, .svg-facebook-green-fill, .svg-facebook-green-outline, .svg-facebook-white, .footer .social-links .facebook:hover, .hero-slides-wrapper .social-links .facebook:hover, .svg-insights-article, .insights-wrapper .article, .svg-insights-article-hover, .insights-wrapper .img-wrapper:hover .article, .svg-insights-audio, .insights-wrapper .audio, .svg-insights-audio-hover, .insights-wrapper .img-wrapper:hover .audio, .svg-insights-video, .insights-wrapper .video, .svg-insights-video-hover, .insights-wrapper .img-wrapper:hover .video, .svg-linkedin, .footer .social-links .linkedin, .hero-slides-wrapper .social-links .linkedin, .svg-linkedin-green-fill, .svg-linkedin-green-outline, .svg-linkedin-white, .footer .social-links .linkedin:hover, .hero-slides-wrapper .social-links .linkedin:hover, .svg-links, .svg-retweet, .svg-search, form.search .form-content .do-search, .svg-search-blue, form.search .form-content .do-search:hover, .svg-search-icon, .actions-nav .action-search, .svg-search-icon-hover, .actions-nav .action-search:hover, .actions-nav .action-search.active, .svg-search-type-all, form.search .form-content .search-types .all label:before, form.search .form-content .search-types-toggle.all, .svg-search-type-insights, form.search .form-content .search-types .insights label:before, form.search .form-content .search-types-toggle.insights, .svg-search-type-people, form.search .form-content .search-types .people label:before, form.search .form-content .search-types-toggle.people, .svg-search-type-strategies, form.search .form-content .search-types .strategies label:before, form.search .form-content .search-types-toggle.strategies, .svg-twitter, .footer .social-links .twitter, .hero-slides-wrapper .social-links .twitter, .svg-twitter-green-fill, .svg-twitter-green-outline, .svg-twitter-white, .footer .social-links .twitter:hover, .hero-slides-wrapper .social-links .twitter:hover, .svg-user, .actions-nav .action-login, .svg-user-hover, .actions-nav .action-login:hover, .actions-nav .action-login.active, .svg-view-all-blue, .press-wrapper .content .view-all:hover:before, .svg-view-all-green, .press-wrapper .content .view-all:before, .svg-youtube, .footer .social-links .youtube, .hero-slides-wrapper .social-links .youtube, .svg-youtube-green-fill, .svg-youtube-green-outline, .svg-youtube-white, .footer .social-links .youtube:hover, .hero-slides-wrapper .social-links .youtube:hover {
-  background: url("svg/sprite.css-be7989a7.svg") no-repeat;
+.svg-arrow-down, .svg-arrow-left, .insights-wrapper .insights-list .owl-nav .owl-prev, .svg-arrow-left-hover, .insights-wrapper .insights-list .owl-nav .owl-prev:hover, .svg-arrow-right, .footer .footer-links h5:after, .insights-wrapper .insights-list .owl-nav .owl-next, .svg-arrow-right-hover, .mega-nav .menu.has-submenu > a:after, .insights-wrapper .insights-list .owl-nav .owl-next:hover, .svg-arrow-up, .svg-burger, .svg-chevron, form.search .form-content .search-types-toggle:after, .svg-chevron-green, form.search .form-content .search-types-toggle:hover:after, .svg-close, form.search .form-content .close, .svg-close-black, .svg-close-blue, form.search .form-content .close:hover, .svg-ellipse, .hero-slides.owl-carousel .owl-dot, .svg-ellipse-empty, .hero-slides.owl-carousel .owl-dot:hover, .svg-ellipse-selected, .hero-slides.owl-carousel .owl-dot.active, .svg-facebook, .footer .social-links .facebook, .hero-slides-wrapper .social-links .facebook, .svg-facebook-green-fill, .svg-facebook-green-outline, .svg-facebook-white, .footer .social-links .facebook:hover, .hero-slides-wrapper .social-links .facebook:hover, .svg-insights-article, .insights-wrapper .article, .svg-insights-article-hover, .insights-wrapper .img-wrapper:hover .article, .svg-insights-audio, .insights-wrapper .audio, .svg-insights-audio-hover, .insights-wrapper .img-wrapper:hover .audio, .svg-insights-video, .insights-wrapper .video, .svg-insights-video-hover, .insights-wrapper .img-wrapper:hover .video, .svg-linkedin, .footer .social-links .linkedin, .hero-slides-wrapper .social-links .linkedin, .svg-linkedin-green-fill, .svg-linkedin-green-outline, .svg-linkedin-white, .footer .social-links .linkedin:hover, .hero-slides-wrapper .social-links .linkedin:hover, .svg-search, form.search .form-content .do-search, .svg-search-blue, form.search .form-content .do-search:hover, .svg-search-icon, .actions-nav .action-search, .svg-search-icon-hover, .actions-nav .action-search:hover, .actions-nav .action-search.active, .svg-search-type-all, form.search .form-content .search-types .all label:before, form.search .form-content .search-types-toggle.all, .svg-search-type-insights, form.search .form-content .search-types .insights label:before, form.search .form-content .search-types-toggle.insights, .svg-search-type-people, form.search .form-content .search-types .people label:before, form.search .form-content .search-types-toggle.people, .svg-search-type-strategies, form.search .form-content .search-types .strategies label:before, form.search .form-content .search-types-toggle.strategies, .svg-twitter, .footer .social-links .twitter, .hero-slides-wrapper .social-links .twitter, .svg-twitter-green-fill, .svg-twitter-green-outline, .svg-twitter-white, .footer .social-links .twitter:hover, .hero-slides-wrapper .social-links .twitter:hover, .svg-user, .actions-nav .action-login, .svg-user-hover, .actions-nav .action-login:hover, .actions-nav .action-login.active, .svg-view-all-blue, .press-wrapper .content .view-all:hover:before, .svg-view-all-green, .press-wrapper .content .view-all:before, .svg-youtube, .footer .social-links .youtube, .hero-slides-wrapper .social-links .youtube, .svg-youtube-green-fill, .svg-youtube-green-outline, .svg-youtube-white, .footer .social-links .youtube:hover, .hero-slides-wrapper .social-links .youtube:hover {
+  background: url("svg/sprite.css-2638acc6.svg") no-repeat;
 }
 
 .svg-arrow-down {
-  background-position: 49.11660777385159% 94.28571428571429%;
+  background-position: 37.80918727915194% 94.28571428571429%;
 }
 
 .svg-arrow-down-dims {
@@ -84,7 +84,7 @@ a {
 }
 
 .svg-arrow-left-hover, .insights-wrapper .insights-list .owl-nav .owl-prev:hover {
-  background-position: 0 0;
+  background-position: 0 22.535211267605632%;
 }
 
 .svg-arrow-left-hover-dims {
@@ -93,7 +93,7 @@ a {
 }
 
 .svg-arrow-right, .footer .footer-links h5:after, .insights-wrapper .insights-list .owl-nav .owl-next {
-  background-position: 19.12350597609562% 0;
+  background-position: 0 0;
 }
 
 .svg-arrow-right-dims {
@@ -102,7 +102,7 @@ a {
 }
 
 .svg-arrow-right-hover, .mega-nav .menu.has-submenu > a:after, .insights-wrapper .insights-list .owl-nav .owl-next:hover {
-  background-position: 0 22.535211267605632%;
+  background-position: 19.12350597609562% 0;
 }
 
 .svg-arrow-right-hover-dims {
@@ -111,7 +111,7 @@ a {
 }
 
 .svg-arrow-up {
-  background-position: 43.46289752650177% 94.28571428571429%;
+  background-position: 97.17314487632508% 97.14285714285714%;
 }
 
 .svg-arrow-up-dims {
@@ -129,7 +129,7 @@ a {
 }
 
 .svg-chevron, form.search .form-content .search-types-toggle:after {
-  background-position: 100% 40.50632911392405%;
+  background-position: 100% 70.88607594936708%;
 }
 
 .svg-chevron-dims {
@@ -138,7 +138,7 @@ a {
 }
 
 .svg-chevron-green, form.search .form-content .search-types-toggle:hover:after {
-  background-position: 100% 60.75949367088607%;
+  background-position: 100% 0;
 }
 
 .svg-chevron-green-dims {
@@ -147,7 +147,7 @@ a {
 }
 
 .svg-close, form.search .form-content .close {
-  background-position: 0 100%;
+  background-position: 75.09293680297398% 82.25108225108225%;
 }
 
 .svg-close-dims {
@@ -156,7 +156,7 @@ a {
 }
 
 .svg-close-black {
-  background-position: 75.09293680297398% 82.25108225108225%;
+  background-position: 0 100%;
 }
 
 .svg-close-black-dims {
@@ -174,7 +174,7 @@ a {
 }
 
 .svg-ellipse, .hero-slides.owl-carousel .owl-dot {
-  background-position: 93.8566552901024% 97.6470588235294%;
+  background-position: 99.31740614334471% 93.33333333333333%;
 }
 
 .svg-ellipse-dims {
@@ -183,7 +183,7 @@ a {
 }
 
 .svg-ellipse-empty, .hero-slides.owl-carousel .owl-dot:hover {
-  background-position: 100% 70.88607594936708%;
+  background-position: 100% 10.126582278481013%;
 }
 
 .svg-ellipse-empty-dims {
@@ -201,7 +201,7 @@ a {
 }
 
 .svg-facebook, .footer .social-links .facebook, .hero-slides-wrapper .social-links .facebook {
-  background-position: 55.95238095238095% 66.82242990654206%;
+  background-position: 37.301587301587304% 66.82242990654206%;
 }
 
 .svg-facebook-dims {
@@ -210,7 +210,7 @@ a {
 }
 
 .svg-facebook-green-fill {
-  background-position: 75.39682539682539% 0;
+  background-position: 55.95238095238095% 66.82242990654206%;
 }
 
 .svg-facebook-green-fill-dims {
@@ -219,7 +219,7 @@ a {
 }
 
 .svg-facebook-green-outline {
-  background-position: 75.39682539682539% 21.962616822429908%;
+  background-position: 75.39682539682539% 0;
 }
 
 .svg-facebook-green-outline-dims {
@@ -228,7 +228,7 @@ a {
 }
 
 .svg-facebook-white, .footer .social-links .facebook:hover, .hero-slides-wrapper .social-links .facebook:hover {
-  background-position: 75.39682539682539% 43.925233644859816%;
+  background-position: 75.39682539682539% 21.962616822429908%;
 }
 
 .svg-facebook-white-dims {
@@ -237,7 +237,7 @@ a {
 }
 
 .svg-insights-article, .insights-wrapper .article {
-  background-position: 62.83524904214559% 85.20179372197309%;
+  background-position: 90.80459770114942% 0;
 }
 
 .svg-insights-article-dims {
@@ -255,7 +255,7 @@ a {
 }
 
 .svg-insights-audio, .insights-wrapper .audio {
-  background-position: 90.80459770114942% 0;
+  background-position: 90.80459770114942% 34.08071748878924%;
 }
 
 .svg-insights-audio-dims {
@@ -273,7 +273,7 @@ a {
 }
 
 .svg-insights-video, .insights-wrapper .video {
-  background-position: 90.80459770114942% 34.08071748878924%;
+  background-position: 90.80459770114942% 68.16143497757848%;
 }
 
 .svg-insights-video-dims {
@@ -282,7 +282,7 @@ a {
 }
 
 .svg-insights-video-hover, .insights-wrapper .img-wrapper:hover .video {
-  background-position: 90.80459770114942% 68.16143497757848%;
+  background-position: 62.83524904214559% 85.20179372197309%;
 }
 
 .svg-insights-video-hover-dims {
@@ -291,7 +291,7 @@ a {
 }
 
 .svg-linkedin, .footer .social-links .linkedin, .hero-slides-wrapper .social-links .linkedin {
-  background-position: 38.095238095238095% 0;
+  background-position: 75.39682539682539% 65.88785046728972%;
 }
 
 .svg-linkedin-dims {
@@ -300,7 +300,7 @@ a {
 }
 
 .svg-linkedin-green-fill {
-  background-position: 37.301587301587304% 66.82242990654206%;
+  background-position: 18.650793650793652% 66.82242990654206%;
 }
 
 .svg-linkedin-green-fill-dims {
@@ -309,7 +309,7 @@ a {
 }
 
 .svg-linkedin-green-outline {
-  background-position: 18.650793650793652% 66.82242990654206%;
+  background-position: 37.301587301587304% 44.85981308411215%;
 }
 
 .svg-linkedin-green-outline-dims {
@@ -318,7 +318,7 @@ a {
 }
 
 .svg-linkedin-white, .footer .social-links .linkedin:hover, .hero-slides-wrapper .social-links .linkedin:hover {
-  background-position: 0 66.82242990654206%;
+  background-position: 18.650793650793652% 44.85981308411215%;
 }
 
 .svg-linkedin-white-dims {
@@ -326,26 +326,8 @@ a {
   height: 47px;
 }
 
-.svg-links {
-  background-position: 37.80918727915194% 94.28571428571429%;
-}
-
-.svg-links-dims {
-  width: 16px;
-  height: 16px;
-}
-
-.svg-retweet {
-  background-position: 98.21428571428571% 95.2%;
-}
-
-.svg-retweet-dims {
-  width: 19px;
-  height: 11px;
-}
-
 .svg-search, form.search .form-content .do-search {
-  background-position: 10.989010989010989% 98.29787234042553%;
+  background-position: 20.512820512820515% 98.29787234042553%;
 }
 
 .svg-search-dims {
@@ -354,7 +336,7 @@ a {
 }
 
 .svg-search-blue, form.search .form-content .do-search:hover {
-  background-position: 20.512820512820515% 98.29787234042553%;
+  background-position: 10.989010989010989% 98.29787234042553%;
 }
 
 .svg-search-blue-dims {
@@ -372,7 +354,7 @@ a {
 }
 
 .svg-search-icon-hover, .actions-nav .action-search:hover, .actions-nav .action-search.active {
-  background-position: 31.782945736434108% 86.36363636363636%;
+  background-position: 0 86.36363636363636%;
 }
 
 .svg-search-icon-hover-dims {
@@ -381,7 +363,7 @@ a {
 }
 
 .svg-search-type-all, form.search .form-content .search-types .all label:before, form.search .form-content .search-types-toggle.all {
-  background-position: 100% 30.379746835443036%;
+  background-position: 100% 40.50632911392405%;
 }
 
 .svg-search-type-all-dims {
@@ -390,7 +372,7 @@ a {
 }
 
 .svg-search-type-insights, form.search .form-content .search-types .insights label:before, form.search .form-content .search-types-toggle.insights {
-  background-position: 100% 0;
+  background-position: 100% 30.379746835443036%;
 }
 
 .svg-search-type-insights-dims {
@@ -399,7 +381,7 @@ a {
 }
 
 .svg-search-type-people, form.search .form-content .search-types .people label:before, form.search .form-content .search-types-toggle.people {
-  background-position: 100% 10.126582278481013%;
+  background-position: 100% 20.253164556962027%;
 }
 
 .svg-search-type-people-dims {
@@ -408,7 +390,7 @@ a {
 }
 
 .svg-search-type-strategies, form.search .form-content .search-types .strategies label:before, form.search .form-content .search-types-toggle.strategies {
-  background-position: 100% 20.253164556962027%;
+  background-position: 100% 60.75949367088607%;
 }
 
 .svg-search-type-strategies-dims {
@@ -417,7 +399,7 @@ a {
 }
 
 .svg-twitter, .footer .social-links .twitter, .hero-slides-wrapper .social-links .twitter {
-  background-position: 56.74603174603175% 43.925233644859816%;
+  background-position: 38.095238095238095% 0;
 }
 
 .svg-twitter-dims {
@@ -426,7 +408,7 @@ a {
 }
 
 .svg-twitter-green-fill {
-  background-position: 56.74603174603175% 21.962616822429908%;
+  background-position: 56.74603174603175% 43.925233644859816%;
 }
 
 .svg-twitter-green-fill-dims {
@@ -435,7 +417,7 @@ a {
 }
 
 .svg-twitter-green-outline {
-  background-position: 56.74603174603175% 0;
+  background-position: 56.74603174603175% 21.962616822429908%;
 }
 
 .svg-twitter-green-outline-dims {
@@ -444,7 +426,7 @@ a {
 }
 
 .svg-twitter-white, .footer .social-links .twitter:hover, .hero-slides-wrapper .social-links .twitter:hover {
-  background-position: 37.301587301587304% 44.85981308411215%;
+  background-position: 56.74603174603175% 0;
 }
 
 .svg-twitter-white-dims {
@@ -453,7 +435,7 @@ a {
 }
 
 .svg-user, .actions-nav .action-login {
-  background-position: 0 86.36363636363636%;
+  background-position: 15.891472868217054% 86.36363636363636%;
 }
 
 .svg-user-dims {
@@ -462,7 +444,7 @@ a {
 }
 
 .svg-user-hover, .actions-nav .action-login:hover, .actions-nav .action-login.active {
-  background-position: 15.891472868217054% 86.36363636363636%;
+  background-position: 31.782945736434108% 86.36363636363636%;
 }
 
 .svg-user-hover-dims {
@@ -471,7 +453,7 @@ a {
 }
 
 .svg-view-all-blue, .press-wrapper .content .view-all:hover:before {
-  background-position: 99.6376811594203% 80.67226890756302%;
+  background-position: 99.6376811594203% 90.33613445378151%;
 }
 
 .svg-view-all-blue-dims {
@@ -480,7 +462,7 @@ a {
 }
 
 .svg-view-all-green, .press-wrapper .content .view-all:before {
-  background-position: 99.6376811594203% 90.33613445378151%;
+  background-position: 99.6376811594203% 80.67226890756302%;
 }
 
 .svg-view-all-green-dims, .press-wrapper .content .view-all:before {
@@ -489,7 +471,7 @@ a {
 }
 
 .svg-youtube, .footer .social-links .youtube, .hero-slides-wrapper .social-links .youtube {
-  background-position: 18.650793650793652% 44.85981308411215%;
+  background-position: 0 44.85981308411215%;
 }
 
 .svg-youtube-dims {
@@ -498,7 +480,7 @@ a {
 }
 
 .svg-youtube-green-fill {
-  background-position: 0 44.85981308411215%;
+  background-position: 38.095238095238095% 21.962616822429908%;
 }
 
 .svg-youtube-green-fill-dims {
@@ -507,7 +489,7 @@ a {
 }
 
 .svg-youtube-green-outline {
-  background-position: 38.095238095238095% 21.962616822429908%;
+  background-position: 75.39682539682539% 43.925233644859816%;
 }
 
 .svg-youtube-green-outline-dims {
@@ -516,7 +498,7 @@ a {
 }
 
 .svg-youtube-white, .footer .social-links .youtube:hover, .hero-slides-wrapper .social-links .youtube:hover {
-  background-position: 75.39682539682539% 65.88785046728972%;
+  background-position: 0 66.82242990654206%;
 }
 
 .svg-youtube-white-dims {
