--- a/css/style.css
+++ b/css/style.css
@@ -2545,6 +2545,7 @@ body {
   flex-direction: column;
   justify-content: flex-start;
   top: 247px;
+  max-height: 300px;
   transition: top 1s;
 }
 .home-info .tiles .tile-content a {
@@ -2556,7 +2557,7 @@ body {
   content: '';
   display: block;
   position: absolute;
-  padding-top: 100%;
+  padding-top: min(100%, 300px);
   left: 0;
   right: 0;
   bottom: 0;
@@ -2744,7 +2745,7 @@ body {
 .press-wrapper .content {
   display: flex;
   margin: 0 auto;
-  padding: 55px 0 90px;
+  padding: 55px 15px 90px;
   max-width: 1345px;
 }
 .press-wrapper .content .title {
@@ -2777,6 +2778,9 @@ body {
   position: absolute;
   right: 0;
   transition: background-image 0.2s ease-in-out;
+}
+.press-wrapper .side {
+  padding-left: 15px;
 }
 .press-wrapper .tweet-content {
   background: #f1f1f1;
@@ -2908,11 +2912,6 @@ a.btn.primary:hover:before {
 }
 
 @media screen and (max-width: 1279px) {
-  .press-wrapper,
-  .insights-wrapper {
-    display: none;
-  }
-
   .link-underline {
     font-size: 13px;
     line-height: 14px;
@@ -2924,7 +2923,7 @@ a.btn.primary:hover:before {
   .hero-wrapper .img-wrapper img,
   .hero-wrapper .img-wrapper video {
     width: auto;
-    height: 100%;
+    min-height: 100%;
   }
   .hero-wrapper h1 {
     font-size: 42px;
@@ -2940,11 +2939,13 @@ a.btn.primary:hover:before {
   .home-info {
     flex-direction: column;
     padding: 50px 15px;
+    margin: 0 auto;
   }
   .home-info .content {
     text-align: center;
   }
   .home-info .content h2 {
+    margin-bottom: 20px;
     font-size: 22px;
     line-height: 28px;
   }
@@ -2954,18 +2955,24 @@ a.btn.primary:hover:before {
     line-height: 20px;
   }
   .home-info .tiles {
-    margin: 55px -7.5px 0;
-    width: 100%;
+    margin: 47.5px -7.5px 0;
+    width: calc(100% + 15px);
+    justify-content: center;
+    max-width: 630px;
   }
   .home-info .tiles > li {
     height: auto;
     margin: 7.5px !important;
-    padding-top: calc(50% - 15px);
+    padding-top: min(calc(50% - 15px), 300px);
     width: calc(50% - 15px);
+    max-width: 300px;
+    max-height: 300px;
   }
   .home-info .tiles > li img {
     width: 100%;
     height: 100%;
+    max-height: 300px;
+    max-width: 300px;
   }
   .home-info .tiles > li .tile-content {
     position: absolute;
@@ -2974,7 +2981,7 @@ a.btn.primary:hover:before {
     background: linear-gradient(180.12deg, rgba(0, 0, 0, 0) -27.43%, #000000 99.89%);
   }
   .home-info .tiles > li .tile-content h3 {
-    max-width: 90%;
+    max-width: 85%;
     margin: 0 auto 10px;
     font-size: 16px;
     line-height: 28px;
@@ -2988,6 +2995,138 @@ a.btn.primary:hover:before {
   .home-info .tiles > li .tile-content .link-underline {
     font-size: 13px;
     line-height: 14px;
+  }
+
+  .insights-wrapper h2 {
+    font-size: 22px;
+    line-height: 28px;
+  }
+  .insights-wrapper .content {
+    padding: 45px 15px;
+  }
+  .insights-wrapper .insights-list {
+    margin: 0 -15px;
+    width: auto;
+  }
+  .insights-wrapper .insights-list .owl-item {
+    margin: 0;
+    padding: 0 15px;
+  }
+  .insights-wrapper .insights-list .owl-dots {
+    display: block;
+    margin: 40px auto;
+    text-align: center;
+  }
+  .insights-wrapper .title-link {
+    font-size: 16px;
+    line-height: 20px !important;
+  }
+  .insights-wrapper .owl-nav {
+    display: none;
+  }
+  .insights-wrapper .owl-dot {
+    background: #F1F1F1 !important;
+    border-radius: 100%;
+    height: 10px;
+    margin: 0 7.5px;
+    width: 10px;
+    opacity: 0.5;
+  }
+  .insights-wrapper .owl-dot.active {
+    background: #fff !important;
+    opacity: 1;
+  }
+  .insights-wrapper .button-wrapper {
+    margin: 0;
+  }
+
+  .press-wrapper .content {
+    flex-direction: column;
+    padding: 50px 15px 0;
+  }
+  .press-wrapper .content h2 {
+    font-size: 22px;
+    line-height: 28px;
+  }
+  .press-wrapper .content .title .separator {
+    margin: 0 22px;
+  }
+  .press-wrapper .content .view-all {
+    min-width: 99px;
+    padding-right: 32px;
+  }
+  .press-wrapper .article-content {
+    padding: 0;
+  }
+  .press-wrapper .article-content .article.main {
+    margin: 0 auto;
+  }
+  .press-wrapper .article-content .article.main h5 {
+    margin-bottom: 0;
+  }
+  .press-wrapper .article-content .article.main h5 a {
+    font-size: 22px;
+    line-height: 28px;
+  }
+  .press-wrapper .article-content .article.main p {
+    font-size: 14px;
+    line-height: 20px;
+  }
+  .press-wrapper .article-content .article h5 a {
+    font-size: 18px;
+    line-height: 26px;
+  }
+  .press-wrapper .article-content .article a {
+    font-size: 22px;
+    line-height: 28px;
+  }
+  .press-wrapper .article-content .article .link-underline {
+    font-size: 13px;
+    line-height: 14px;
+  }
+  .press-wrapper .title {
+    max-width: 510px;
+    margin: 0 auto 45px;
+  }
+  .press-wrapper .side {
+    display: flex;
+    justify-content: center;
+    margin: 0 -7.5px;
+    padding-bottom: 20px;
+  }
+  .press-wrapper .side .article {
+    width: 50%;
+    max-width: 262.5px;
+    padding: 0 7.5px;
+  }
+  .press-wrapper .side .article:nth-child(n+3) {
+    display: none;
+  }
+  .press-wrapper .articles {
+    flex-direction: column;
+  }
+  .press-wrapper .tweet-content {
+    margin: 0 -15px;
+    padding: 45px 15px;
+    width: auto;
+    max-width: none;
+  }
+  .press-wrapper .tweet-content .title {
+    max-width: 510px;
+    margin: 0 auto 42px;
+  }
+  .press-wrapper .tweet-content .twitter-feed {
+    max-width: 510px;
+    margin: 0 auto;
+  }
+  .press-wrapper .tweet-content .twitter-timeline {
+    max-width: 490px;
+    width: 100% !important;
+  }
+
+  a.btn.primary {
+    min-width: 144px;
+    padding: 16.5px 27px;
   }
 }
 .hidden {
