--- a/css/style.css
+++ b/css/style.css
@@ -2361,11 +2361,12 @@ body {
   --d: 100%;
 }
 
-.hero-slides {
+.hero-slides-wrapper {
   overflow: hidden;
   margin: 0 auto;
   max-width: 1440px;
 }
+
 .hero-slides.owl-carousel .owl-item {
   display: flex;
   flex-direction: column;
