--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -43,6 +43,10 @@
 	// }
 }
 
+#menu-toggle {
+	display: none;
+}
+
 .navigations {
 	display: flex;
 	width: 997px;
@@ -531,7 +535,7 @@ form.search {
 	#menu-toggle {
 		height: 32px;
 		width: 32px;
-
+		display: block;
 		margin: 19px 67px 19px 0;
 		position: relative;
 
